- fixed bug in error counting
- renamed score to pairs

2.0:
- initial public release